--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,1 +1,5 @@
-{ "extends":"../config/tsconfig.base.json","compilerOptions":{"outDir":"dist","declaration":true},"include":["src"] }
+{
+  "extends": "../config/tsconfig.base.json",
+  "compilerOptions": { "outDir": "dist", "declaration": true },
+  "include": ["src"]
+}
