--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -2,21 +2,32 @@
   "name": "api-gateway",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "dev": "set NODE_ENV=development && ts-node-dev --respawn --transpile-only  src/main.ts",
+    "start:prod": "set NODE_ENV=production && node dist/apps/api-gateway/src/main",
+    "build": "nest build",
+    "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/microservices": "^10.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "@foodapp/utils": "workspace:*",
     "@grpc/grpc-js": "^1.9.3",
     "@grpc/proto-loader": "^0.7.10",
-    "@foodapp/utils": "workspace:*"
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/microservices": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/testing": "^11.1.6",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
+    "nestjs-pino": "^4.4.1",
+    "pino": "^10.0.0",
+    "pino-pretty": "^13.1.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
-    "ts-node": "^10.9.2"
+    "cpx": "^1.5.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.0"
   }
 }
