--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -2,21 +2,27 @@
   "name": "order-service",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/",
+    "start": "node dist/src/main.js"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.0.0",
+    "@foodapp/utils": "workspace:*",
+    "@grpc/grpc-js": "^1.9.3",
+    "@grpc/proto-loader": "^0.7.10",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/microservices": "^11.1.6",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20",
-    "pg": "^8.11.3",
-    "@grpc/grpc-js": "^1.9.3",
-    "@grpc/proto-loader": "^0.7.10"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.0"
   }
 }
