--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -2,12 +2,17 @@
   "name": "payment-service",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/",
+    "start": "node dist/src/main.js"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.0.0",
+    "@foodapp/utils": "workspace:*",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/microservices": "^11.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
