--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "foodapp",
   "private": true,
   "packageManager": "pnpm@9.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build"
   },
   "dependencies": {
+    "@nestjs/testing": "^11.1.6",
+    "@nestjs/typeorm": "^11.0.0",
+    "order-service": "^0.0.1-alpha.0",
     "pnpm": "^10.17.1",
     "turbo": "^2.5.8"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.6.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
