--- a/packages/config/tsconfig.base.json
+++ b/packages/config/tsconfig.base.json
@@ -8,6 +8,8 @@
     "esModuleInterop":true,
     "resolveJsonModule":true,
     "forceConsistentCasingInFileNames":true,
-    "baseUrl":"."
+    "baseUrl":".",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
