--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,7 +7,11 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "zod": "^3.23.8",
-    "@nestjs/common": "^10.0.0"
+    "@nestjs/common": "^11.1.6",
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0"
   }
 }
