--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -18,6 +18,8 @@
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/testing": "^11.1.6",
     "@types/express": "^5.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "express": "^5.1.0",
     "nestjs-pino": "^4.4.1",
     "pino": "^10.0.0",
