--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -15,13 +15,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
     "@nestjs/microservices": "^11.1.6",
+    "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
+    "mysql2": "^3.15.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   }
