--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
   },
