--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,6 +7,7 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.3",
     "@nestjs/common": "^11.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
