--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -5,7 +5,16 @@
     "dev": "set NODE_ENV=development && ts-node-dev --respawn --transpile-only  src/main.ts",
     "start:prod": "set NODE_ENV=production && node dist/apps/api-gateway/src/main",
     "build": "nest build",
-    "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/"
+    "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/",
+    "prepare": "husky",
+    "lint": "eslint . --ext .ts,.js",
+    "format": "prettier --write ."
+  },
+  "lint-staged": {
+    "*.{ts,js,json}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@foodapp/utils": "workspace:*",
@@ -16,6 +25,7 @@
     "@nestjs/core": "^11.1.6",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/testing": "^11.1.6",
     "@types/express": "^5.0.3",
     "class-transformer": "^0.5.1",
