--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "start": "turbo run start:prod",
+    "prepare": "husky install",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write ."
+  },
+  "lint-staged": {
+    "*.{ts}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md}": "prettier --write"
   },
   "dependencies": {
     "@nestjs/testing": "^11.1.6",
@@ -14,8 +25,18 @@
     "turbo": "^2.5.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.0.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.0.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
+    "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0"
   }
 }
