--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.3",
     "@nestjs/common": "^11.1.6",
+    "@nestjs/swagger": "^11.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "rxjs": "^7.8.1",
