--- a/apps/restaurant-service/tsconfig.json
+++ b/apps/restaurant-service/tsconfig.json
@@ -1,1 +1,7 @@
-{ "extends":"../../packages/config/tsconfig.base.json","compilerOptions":{"outDir":"dist"},"include":["src"] }
+{
+  "extends": "../../packages/config/tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "dist"
+  },
+  "include": ["src"]
+}
