--- a/infra/_dev/docker-compose.yml
+++ b/infra/_dev/docker-compose.yml
@@ -28,6 +28,18 @@ services:
     volumes:
       - mysql_user_data:/var/lib/mysql
 
+  pg_restaurant:
+    image: postgis/postgis:16-3.4
+    environment:
+      POSTGRES_USER: foodapp
+      POSTGRES_PASSWORD: foodapp
+      POSTGRES_DB: foodapp_restaurant
+    ports: ["5432:5432"]
+    networks:
+      - foodapp_network
+    volumes:
+      - pg_restaurant_data:/var/lib/postgresql/data
+      
   redis:
     image: redis:7
     ports: ["6379:6379"]
@@ -36,6 +48,12 @@ services:
     volumes:
       - redis_data:/data
 
+  nats:
+    image: nats:2
+    ports: ["4222:4222","8222:8222"]
+    networks:
+      - foodapp_network
+      
 networks:
   foodapp_network:
     driver: bridge
@@ -43,3 +61,4 @@ volumes:
   mysql_user_data:
   mysql_auth_data:
   redis_data:
+  pg_restaurant_data:
