--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,10 +12,12 @@
     "@nestjs/swagger": "^11.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express": "^5.1.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "typescript": "^5.4.0"
   }
 }
