--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -2,12 +2,13 @@
   "name": "order-service",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "dev": " set NODE_ENV=development && ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.json",
     "postbuild": "cpx ../../packages/proto/*.proto ./dist/packages/proto/",
-    "start": "node dist/src/main.js"
+    "start:prod": "set NODE_ENV=production && node dist/src/main.js"
   },
   "dependencies": {
+    "ioredis": "^5.3.2",
     "@foodapp/utils": "workspace:*",
     "@grpc/grpc-js": "^1.9.3",
     "@grpc/proto-loader": "^0.7.10",
@@ -18,7 +19,9 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "@nestjs/typeorm": "^11.0.0",
+    "nats": "^2.29.3"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
