--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -8,20 +8,22 @@
     "start:prod": "set NODE_ENV=production && node dist/src/main.js"
   },
   "dependencies": {
-    "ioredis": "^5.3.2",
     "@foodapp/utils": "workspace:*",
     "@grpc/grpc-js": "^1.9.3",
     "@grpc/proto-loader": "^0.7.10",
+    "@keyv/redis": "^5.1.5",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
     "@nestjs/microservices": "^11.1.6",
+    "@nestjs/typeorm": "^11.0.0",
+    "cache-manager": "^7.2.7",
+    "nats": "^2.29.3",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.27",
-    "@nestjs/typeorm": "^11.0.0",
-    "nats": "^2.29.3"
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
